--- a/app/restaurants/[resto]/restaurant.css
+++ b/app/restaurants/[resto]/restaurant.css
@@ -295,7 +295,7 @@
     }
 
     .category-card {
-        height: 200px;
+        height: 250px;
     }
 
     .cat-info h3 {
@@ -323,7 +323,7 @@
     }
 
     .category-card {
-        height: 160px;
+        height: 200px;
         border-radius: 12px;
     }
 
